@@ -15,6 +15,7 @@ Version 1.1.9 work in progress
 - Enh #2334: CHttpRequest::getPathInfo() now properly decodes both UTF-8 and ISO-8859-1 encoded URIs (Sam Dark)
 - Enh #2387: Numeric keys are now displayed in error/exception stacktrace call argument if array isn't 0..X indexed (Sam Dark)
 - Enh #2602: Better error handling in CHttpSession::open() when using PHP <5.3.0 (Sam Dark)
+- Enh #2637: Related table alias set dynamically in relational query is now available in the scopes of reated model (creocoder, Sam Dark)
 
 Version 1.1.8 June 26, 2011
 ---------------------------
